Updated cv files
Made some changes to the website coding, I'm hoping I'm doing this right, if not I imagine it just won't work, in which case I am sorry to waste your time. I'm learning.

--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>My contact details</h1>
-    <p>Facebook@Chris Policheri</p>
-    <p>Facebook@Tronsoda</p>
-    <p>Instagram@Tronsoda</p>
+    <p><a href="https://www.facebook.com/chris.policheri/">Facebook@Chris Policheri</p></a>
+    <p><a href="https://www.facebook.com/tronsoda/">Facebook@Tronsoda</p></a>
+    <p><a href="https://www.instagram.com/tronsoda/?hl=en">Instagram@Tronsoda</p></a>
     <h2>Email Me</h2>
     <p>Tronsoda@yahoo.com</p>
     <hr>
