--- a/index.html
+++ b/index.html
@@ -7,40 +7,33 @@
 </head>
 
 <body>
-  <table cellspacing=20>
+  <table>
     <tr>
-      <td><img src="Chris Profile.png" alt="Chris' Profile Picture"></td>
-      <td>
-        <h1>Chris Policheri</h1>
+      <td><img src="Chris Profile.png" alt="Chris' profile picture"></td>
+      <td> <h1>Chris Policheri</h1>
         <p><strong>Artist, Gamer, Collector, AFOL,</strong><em> and a Fanatic of Pop Culture</em></p>
-        <p>I am an artist of all sorts, a painter,<em> (mostly acylic)</em> a photographer, <em>(mostly toys)</em> a craftsman, and a storyteller through film & animation.
+      <p>I am an artist of all sorts, a painter,<em> (mostly acylic)</em> a photographer, <em>(mostly toys)</em> a craftsman, and a storyteller through film & animation.
           <br />I love gaming and although XBox had my heart for over 13 years, the last 5 have been pretty much Playstation. <em>Nintendo and Retro games are always fun as hell!</em>
-          <br />I've worked a number of jobs from promotional marketing to selling clothes but mostly in hospitality and restaurants... Well until recently
-        </p>
-      </td>
+          <br />I've worked a number of jobs from promotional marketing to selling clothes but mostly in hospitality and restaurants... Well until recently. <em>#stupidcovid</em> </p></td>
     </tr>
   </table>
-  <hr>
+    <hr>
   <h3>Education and Experience</h3>
   <ul>
-    <li><strong><a href="https://perpich.mn.gov/arts-high-school/">Minnesota Center for Arts Education</a></strong><em>(changed it's name to <strong><a href="https://perpich.mn.gov/arts-high-school/">Perpich Center for Arts
-            Education</a>)</strong></em></li>
+    <li><strong>Minnesota Center for Arts Education</strong><em>(changed it's name to <strong><a href="https://perpich.mn.gov/arts-high-school/">Perpich Center for Arts Education</a>)</strong></em></li>
     <li>Right after art school I started traveling all over the country and even a bit of Europe.
-      <br />I worked a lot of jobs and did a lot of training courses, often excelling and having to further my knowledge and training.
-    </li>
+      <br />I worked a lot of jobs and did a lot of training courses, often excelling and having to further my knowledge and training.</li>
     <li>Food and Alcohol certifications from California, Minnesota, and Washington</li>
-    <li>Opened restaurants from scratch.</li>
     <li>Promotional marketing events and leading my own team.</li>
     <li>Written and designed restaurant training manuals and employee schedules.</li>
     <li>Gone through the intense, detailed and strict training of large corporation restaurants.
-      <br /><em>i.e. Planet Hollywood/Kimpton Hotels</em>
-    </li>
+    <br /><em>i.e. Planet Hollywood/Kimpton Hotels</em> </li>
     <li>Worked a lot with Excel and Office and took courses on OpenTable</li>
     <li>I'm very capable at taking on new tasks and learning them, practicing them, and knowing them.</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table cellspacing=10>
+  <table cellspacing=30>
     <thead>
       <tr>
         <th>Dates</th>
@@ -50,62 +43,61 @@
         <td>2017-2020</td>
         <td>Lead Server at Kimpton Hotels/"Outlier"</td>
       </tr>
-      <tr>
-        <td>2010-2017</td>
-        <td>Server & Supervisior at Icon Grill</td>
-      </tr>
-      <td>2010</td>
-      <td>Event Team Manager at Hadley Media Promotional Marketing</td>
+    <tr>
+      <td>2010-2017</td>
+      <td>Server & Supervisior at Icon Grill</td>
+    </tr>
+    <td>2010</td>
+    <td>Event Team Manager at Hadley Media Promotional Marketing</td>
   </table>
   <hr>
   <h3>Skills</h3>
-  <table>
-    <tr>
-      <td>
-        <table cellspacing=10>
-          <tr>
-            <td>Artistic and Creative</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Attention to Detail</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Organization</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Working with People</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing=10>
-          <tr>
-            <td>Photography</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Videogames</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Animation and Stop Motion</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Digital and Video Editing</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+<table>
+  <tr>
+    <td><table cellspacing=10>
+      <tr>
+        <td>Artistic and Creative</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Attention to Detail</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Organization</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Working with People</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+    </table>
+  </td>
+    <td>
+      <table cellspacing=10>
+      <tr>
+        <td>Photography</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Videogames</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Animation and Stop Motion</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Digital and Video Editing</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+    </table>
+  </td>
+  </tr>
+</table>
 
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
+<h2><a href="hobbies.html">My Hobbies</a></h2>
   <br>
   <a href="contact.html">Contact Me</a>
 </body>
